--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "fluent-ffmpeg": "^2.1.2",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.23.0",
+    "yt-search": "^2.10.4",
+    "ytdl-core": "^4.11.5"
   }
 }
