--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.6",
     "qrcode-terminal": "^0.12.0",
+    "random-animals-api": "^1.2.6",
     "whatsapp-web.js": "^1.23.0",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.5"
