--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.6",
+    "mathjs": "^12.3.2",
     "nodemon": "^3.0.3",
     "qrcode-terminal": "^0.12.0",
     "random-animals-api": "^1.2.6",
