--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ lerna-debug.log*
 
 .wwebjs_auth
 .wwebjs_cache
-modules/nitrr
+modules/student
 
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
