--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "cheems-bot",
-  "version": "1.0.0",
-  "description": "Whatsapp bot",
+  "version": "2.0.0",
+  "description": "A modular WhatsApp bot.",
   "main": "bot.js",
   "scripts": {
     "test": "node bot.js"
   },
-  "author": "",
+  "author": "https://github.com/bunnykek",
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
     "dotenv": "^16.3.1",
-    "fluent-ffmpeg": "^2.1.2",
     "got": "^11.8.6",
-    "mathjs": "^12.3.2",
-    "nodemon": "^3.0.3",
     "qrcode-terminal": "^0.12.0",
     "random-animals-api": "^1.2.6",
     "sanitize-filename": "^1.6.3",
